--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My site</title>
 </head>
 <body>
-    <h1>Hola soy Diego!!! 👍</h1>    
+    <h1>Hola soy Diego!!! 👍</h1> 
+    <img src="img/goku.jpg" alt="gokufacha">
 </body>
 </html>
